[package]
name = "blueprint-pricing-engine"
version = "0.2.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Tangle Cloud Pricing Engine for service offerings"

[lib]
name = "blueprint_pricing_engine_lib"
path = "src/lib.rs"

[[bin]]
name = "pricing-engine-server"
path = "src/main.rs"

[dependencies]
# Blueprint dependencies
blueprint-core = { workspace = true, features = ["tracing"] }
blueprint-crypto = { workspace = true, features = ["tangle-pair-signer"] }
blueprint-crypto-core = { workspace = true }
blueprint-keystore = { workspace = true, features = ["sp-core"] }
blueprint-networking = { workspace = true }
blueprint-std = { workspace = true }
blueprint-tangle-extra = { workspace = true, features = ["std"] }

# Misc dependencies
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }
hex = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true, features = ["parse", "serde", "std"] }
tiny-keccak = { workspace = true }

# Substrate RPC and runtime API dependencies
jsonrpsee = { workspace = true, features = ["server", "macros", "http-client"] }
tangle-subxt = { workspace = true, features = ["std"] }

# Substrate chain
sp-core = { workspace = true, features = ["serde"] }
sp-io = { workspace = true }

# Async
futures = { workspace = true, features = ["thread-pool"] }
tokio = { workspace = true, features = ["full"] }

# Networking
rand = { workspace = true, features = ["std", "std_rng"] }
bincode = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }

# P2P networking for RFQ and gossip
libp2p = { workspace = true, features = ["gossipsub", "identify", "kad", "noise", "yamux", "tcp", "tokio", "dns"] }
serde_with = { workspace = true }

# Logging
tracing-subscriber = { workspace = true }
time = { workspace = true }

# Benchmarking
sysinfo = { workspace = true, features = ["system"] }
num_cpus = { workspace = true }

# Utilities
chrono = { workspace = true, features = ["serde", "clock"] }
libc = { workspace = true }
rust_decimal = { workspace = true, features = ["serde"] }


# gRPC
tonic = { workspace = true, features = ["transport", "codegen", "prost", "router"] }
prost = { workspace = true, features = ["derive"] }

# Proof of work
sha2 = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
blueprint-networking = { path = "../networking", features = ["testing"] }
blueprint-testing-utils = { path = "../testing-utils", features = ["tangle"] }
blueprint-runner = { path = "../runner", features = ["std", "tangle"] }
blueprint-chain-setup = { path = "../chain-setup" }
tempfile = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }

[features]
default = []
tangle-listener = []
std = []
