[package]
name = "blueprint-pricing-engine"
version = "0.2.5"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Tangle Cloud Pricing Engine for service offerings"

[lib]
name = "blueprint_pricing_engine_lib"
path = "src/lib.rs"

[[bin]]
name = "pricing-engine-server"
path = "src/main.rs"

[dependencies]
# Blueprint dependencies
blueprint-core = { workspace = true, features = ["tracing"] }
blueprint-crypto = { workspace = true, features = ["k256"] }
blueprint-crypto-core = { workspace = true }
blueprint-keystore = { workspace = true, features = ["ecdsa", "evm"] }
blueprint-networking = { workspace = true }
blueprint-std = { workspace = true }
blueprint-client-tangle-evm = { workspace = true }

# Misc dependencies
clap = { workspace = true, features = ["derive", "env"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
hex = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }

# Async / networking utilities
futures = { workspace = true, features = ["thread-pool"] }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true, features = ["std", "std_rng"] }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
libp2p = { workspace = true, features = ["gossipsub", "identify", "kad", "noise", "yamux", "tcp", "tokio", "dns"] }
serde_with = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }

# Benchmarking / system
sysinfo = { workspace = true, features = ["system"] }
num_cpus = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
libc = { workspace = true }
rust_decimal = { workspace = true, features = ["serde"] }

# HTTP client for cloud pricing APIs
reqwest = { workspace = true, features = ["json"] }
urlencoding = "2.1"

# gRPC
tonic = { workspace = true, features = ["transport", "codegen", "prost", "router"] }
prost = { workspace = true, features = ["derive"] }

# Proof of work
sha2 = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
blueprint-networking = { path = "../networking", features = ["testing"] }
blueprint-testing-utils = { path = "../testing-utils" }
blueprint-anvil-testing-utils = { path = "../testing-utils/anvil" }
tempfile = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }
protobuf-src = "2.1"

[features]
default = ["std"]
std = []
pricing-engine-e2e-tests = []
