[package]
name = "blueprint-qos"
version = "0.1.0-alpha.4"
description = "Quality of Service (QoS) module for Blueprint SDK"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-core = { workspace = true, default-features = false, features = ["tracing"] }
blueprint-crypto = { workspace = true, features = ["hashing", "sp-core", "tangle-pair-signer"] }
blueprint-keystore = { workspace = true }
blueprint-std = { workspace = true }

bollard = { workspace = true, features = ["ssl"] }
tempfile = { workspace = true }
tangle-subxt = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
sp-core = { workspace = true, features = ["std"] }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "signal", "macros"] }
tonic = { workspace = true, features = ["transport", "codegen", "prost", "router"] }
prost = { workspace = true, features = ["prost-derive"] }
sysinfo = { workspace = true, features = ["system", "disk", "network"] }
rand = { workspace = true }
prometheus = { workspace = true, features = ["process"] }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-prometheus = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
opentelemetry_sdk = { workspace = true, features = ["metrics", "rt-tokio", "trace"] }
axum = { workspace = true, features = ["tokio", "http1", "http2", "json"] }
futures = { workspace = true, features = ["executor"] }
tracing-loki = { workspace = true, features = ["compat-0-2-1"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-opentelemetry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
blueprint-testing-utils = { path = "../testing-utils", features = ["tangle"] }
blueprint-tangle-extra = { path = "../tangle-extra" }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }

[features]
default = ["std"]
std = [
    "blueprint-core/std",
    "blueprint-crypto/std",
    "blueprint-keystore/std",
    "blueprint-std/std",
    "sp-core/std",
]
