[package]
name = "blueprint-qos"
version = "0.1.0-alpha.6"
description = "Quality of Service (QoS) module for Blueprint SDK"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-core = { workspace = true, default-features = false, features = ["tracing"] }
blueprint-crypto = { workspace = true, features = ["hashing", "k256"] }
blueprint-keystore = { workspace = true }
blueprint-std = { workspace = true }
blueprint-remote-providers = { workspace = true, optional = true }

async-trait = { workspace = true }
bollard = { workspace = true, features = ["ssl"] }
tempfile = { workspace = true }


thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "signal", "macros"] }
tonic = { workspace = true, features = ["transport", "codegen", "prost", "router"] }
prost = { workspace = true, features = ["prost-derive"] }
sysinfo = { workspace = true, features = ["system", "disk", "network"] }
rand = { workspace = true }
prometheus = { workspace = true, features = ["process"] }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-prometheus = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
opentelemetry_sdk = { workspace = true, features = ["metrics", "rt-tokio", "trace"] }
axum = { workspace = true, features = ["tokio", "http1", "http2", "json"] }
futures = { workspace = true, features = ["executor"] }
tracing = { workspace = true }
tracing-loki = { workspace = true, features = ["compat-0-2-1"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-opentelemetry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["v4"] }

alloy-primitives = { workspace = true, features = ["std"] }
alloy-provider = { workspace = true }
alloy-network = { workspace = true }
alloy-transport = { workspace = true }
alloy-rpc-types = { workspace = true, features = ["eth"] }
alloy-sol-types = { workspace = true }
tnt-core-bindings = { workspace = true }
k256 = { workspace = true }
alloy-signer-local = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
blueprint-anvil-testing-utils = { workspace = true }
blueprint-router = { workspace = true }
blueprint-tangle-extra = { workspace = true }
hex = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }

[features]
default = ["std"]
std = [
    "blueprint-core/std",
    "blueprint-crypto/std",
    "blueprint-keystore/std",
    "blueprint-std/std",
    "alloy-primitives/std",
]
remote = ["dep:blueprint-remote-providers"]
