[package]
name = "blueprint-router"
version = "0.1.0-alpha.2"
description = "Job routing utilities for the Blueprint SDK"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-core.workspace = true
bytes.workspace = true
document-features = { workspace = true }
pin-project-lite.workspace = true
tower.workspace = true
hashbrown = { workspace = true, default-features = false, features = ["default-hasher", "inline-more"] }
futures = { workspace = true, features = ["alloc"] }

[dev-dependencies]
blueprint-sdk = { path = "../sdk", features = ["macros"]}
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util", "timeout", "limit", "load-shed", "steer", "filter"] }

[features]
default = ["tracing"]

#! `blueprint-router` is fully `no_std` compatible

#! ### Core

## Enable [tracing] support
##
## [tracing]: https://crates.io/crates/tracing
tracing = ["blueprint-core/tracing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
