[package]
name = "blueprint-runner"
version = "0.1.0-alpha.20"
description = "Runner for the Blueprint SDK"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-core.workspace = true
blueprint-router.workspace = true
blueprint-std.workspace = true
blueprint-keystore = { workspace = true }
blueprint-crypto = { workspace = true }
blueprint-qos = { workspace = true }
blueprint-manager-bridge = { workspace = true, features = ["client"] }
blueprint-faas = { workspace = true, optional = true }
blueprint-auth = { workspace = true, optional = true }
blueprint-tee = { workspace = true, optional = true }
k256 = { workspace = true, optional = true }

futures-core.workspace = true
futures-util.workspace = true
tower.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
futures.workspace = true
thiserror.workspace = true
url = { workspace = true, features = ["serde"] }
dynosaur = { workspace = true }
document-features = { workspace = true, features = ["default"] }

# Networking
crossbeam-channel = { workspace = true, optional = true }
blueprint-networking = { workspace = true, optional = true }
libp2p = { workspace = true, optional = true }

# Eigenlayer
blueprint-evm-extra = { workspace = true, optional = true }
alloy-contract = { workspace = true, optional = true }
alloy-primitives = { workspace = true, features = ["serde"], optional = true }
alloy-signer-local = { workspace = true, optional = true }
alloy-signer = { workspace = true, optional = true }
eigensdk = { workspace = true, features = [
    "client-elcontracts",
    "types",
    "utils",
    "client-avsregistry",
    "crypto-bls",
], optional = true }

# Tangle EVM (v2)
blueprint-client-tangle = { workspace = true, optional = true }
alloy-provider = { workspace = true, optional = true }

[dev-dependencies]
blueprint-sdk = { path = "../sdk", features = ["std"] }
tempfile = "3.8"
serde_json = "1.0"
bytes = "1.0"

[features]
default = ["std", "networking"]

#! ### Core

## Enable standard library support
std = ["blueprint-evm-extra?/std", "blueprint-keystore/std", "blueprint-std/std", "blueprint-qos/std"]

## Enable networking support for [`BlueprintEnvironment`](crate::config::BlueprintEnvironment)
networking = ["dep:blueprint-networking", "dep:crossbeam-channel", "dep:libp2p", "blueprint-keystore/zebra"]

## Enable Trusted Execution Environment (TEE) support for the runner
tee = ["dep:blueprint-tee"]

## Enable TLS support for service registration
tls = ["dep:blueprint-auth"]

#! ### Protocols

## Enable [Eigenlayer] support
##
## [Eigenlayer]: https://eigenlayer.xyz
eigenlayer = [
    "dep:blueprint-evm-extra",
    "blueprint-keystore/bn254",
    "blueprint-keystore/eigenlayer",
    "dep:alloy-contract",
    "dep:alloy-primitives",
    "dep:alloy-signer-local",
    "dep:alloy-signer",
    "dep:eigensdk",
    "std",                           # TODO: keystore access requires the std feature
]

## Enable [Symbiotic] support **(CURRENTLY UNUSED)**
##
## [Symbiotic]: https://symbiotic.fi
symbiotic = []

## Enable Tangle EVM (v2) support
##
## This is the EVM-native implementation for Tangle v2 contracts.
tangle = [
    "dep:blueprint-client-tangle",
    "dep:alloy-primitives",
    "dep:alloy-provider",
    "dep:alloy-signer-local",
    "dep:alloy-signer",
    "dep:k256",
    "blueprint-keystore/ecdsa",
    "blueprint-keystore/evm",
    "blueprint-keystore/eigenlayer",
    "std",
]

## Enable FaaS (Function-as-a-Service) execution support
faas = ["dep:blueprint-faas"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
