[package]
name = "blueprint-stores"
version = "0.1.0-alpha.1"
description = "Storage providers for Tangle Blueprints"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-store-local-database = { workspace = true, optional = true }
thiserror.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
default = ["std", "local"]
std = [
    "blueprint-store-local-database?/std",
]
local = ["dep:blueprint-store-local-database"]
