[package]
name = "blueprint-stores"
version = "0.1.0-alpha.1"
description = "Storage providers for Tangle Blueprints"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-store-local-database = { workspace = true, optional = true }
thiserror.workspace = true
document-features = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
default = ["local"]

## Enable the local KV store
local = ["dep:blueprint-store-local-database"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
