[package]
name = "blueprint-tangle-aggregation-svc"
version = "0.2.0-alpha.2"
edition = "2021"
description = "BLS signature aggregation service for Tangle v2"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# HTTP server
axum = { workspace = true, features = ["json", "tokio", "http1", "http2"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Crypto
blueprint-crypto-bn254 = { workspace = true }
blueprint-crypto-core = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }

# Alloy/EVM
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-network = { workspace = true }
alloy-contract = { workspace = true }

# Tangle client
blueprint-client-tangle = { workspace = true }

# HTTP client (for client module)
reqwest = { workspace = true, features = ["json"], optional = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
default = []
client = ["reqwest"]

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tempfile = { workspace = true }

[lints]
workspace = true
